# ghc-paths

./: Setup.hs  cabal.haskell-ci  ghc-paths.cabal
.github/workflows/: haskell-ci.yml
