name: ghc-paths
version: 0.1.0.12
x-revision: 6
license: BSD3
license-file: LICENSE
copyright: (c) Simon Marlow
author: Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
stability: stable
synopsis: Knowledge of GHC's installation directories
description: Knowledge of GHC's installation directories
category: Development
cabal-version: >= 1.8
build-type: Custom


tested-with:
  GHC == 9.10.0
  GHC == 9.8.2
  GHC == 9.6.5
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

custom-setup
        setup-depends:
            base  >= 3   && < 5
          , Cabal >= 1.6 && < 3.13
          , directory

library
        build-depends: base >= 3 && < 5
        exposed-modules: GHC.Paths

source-repository head
  type:     git
  location: https://github.com/simonmar/ghc-paths
